src/test/test-models/good/fun_args_int0.stan
functions { int foo() { return 3; } } model { }
