src/test/test-models/bad/err-bare-type-close-square.stan
functions {
  real[ foo(int n) { return n; }
}
model {
}
